# Jarvis

./: .env.example  .gitignore  JARVIS.md  README.md  config.yaml  pyproject.toml  requirements.txt
src/jarvis/: __init__.py  assistant.py  config.py  main.py
src/jarvis/engines/: __init__.py  audio.py  console.py  edge_tts.py  gemini_llm.py  piper_tts.py  porcupine_wake.py  vosk_stt.py  whisper_stt.py
src/jarvis/interfaces/: __init__.py  llm.py  stt.py  tools.py  tts.py  wake_word.py
src/jarvis/tools/: __init__.py  create_folder.py  find_file.py  read_file.py  registry.py  safe_path.py  summarize_document.py  write_file.py
