[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "Voice-activated desktop assistant for Windows with system-level tools"
requires-python = ">=3.11"

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
